--- a/styles/onboarding3.module.css
+++ b/styles/onboarding3.module.css
@@ -86,19 +86,20 @@
 
 .blackBG h2 {
     font-family: 'Lexend';
+    font-size: 33.18px;
 }
 
 .text {
     margin-top: 20px;
     font-size: 16px;
-    font-family: 'Lexend Thin';
+    font-family: 'Lexend';
 }
 
 .next {
     font-size: 20px;
     font-family: Lexend;
     color: #AEACAC;
-    margin-top: 60px;
+    margin-top: 35px;
     display: flex;
     flex-direction: row;
     column-gap: 15px;
@@ -115,7 +116,7 @@
     font-size: 20px;
     font-family: Lexend;
     color: #AEACAC;
-    margin-top: 60px;
+    margin-top: 35px;
     display: flex;
     flex-direction: row;
     column-gap: 15px;
@@ -135,7 +136,7 @@
     display: flex;
     flex-direction: row;
     column-gap: 14px;
-    margin-top: 90px;
+    margin-top: 70px;
 }
 
 .circle :nth-child(1) {
