--- a/styles/onboarding2.module.css
+++ b/styles/onboarding2.module.css
@@ -12,7 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
 
 }
 
@@ -86,19 +87,21 @@
 
 .blackBG h2 {
     font-family: 'Lexend';
+    font-size: 33.18px;
+    
 }
 
 .text {
     margin-top: 20px;
     font-size: 16px;
-    font-family: 'Lexend Thin';
+    font-family: 'Lexend';
 }
 
 .next {
     font-size: 20px;
     font-family: Lexend;
     color: #AEACAC;
-    margin-top: 60px;
+    margin-top: 35px;
     display: flex;
     flex-direction: row;
     column-gap: 15px;
@@ -115,7 +118,7 @@
     font-size: 20px;
     font-family: Lexend;
     color: #AEACAC;
-    margin-top: 60px;
+    margin-top: 25px;
     display: flex;
     flex-direction: row;
     column-gap: 15px;
@@ -135,7 +138,7 @@
     display: flex;
     flex-direction: row;
     column-gap: 14px;
-    margin-top: 70px;
+    margin-top: 29px;
 }
 
 .circle :nth-child(1) {
