--- a/styles/onboarding4.module.css
+++ b/styles/onboarding4.module.css
@@ -89,19 +89,20 @@
 
 .blackBG h2 {
     font-family: 'Lexend';
+    font-size: 33.18px;
 }
 
 .text {
     margin-top: 20px;
     font-size: 16px;
-    font-family: 'Lexend Thin';
+    font-family: 'Lexend';
 }
 
 .next {
     font-size: 20px;
     font-family: Lexend;
     color: #AEACAC;
-    margin-top: 60px;
+    margin-top: 35px;
     display: flex;
     flex-direction: row;
     column-gap: 15px;
@@ -118,7 +119,7 @@
     font-size: 20px;
     font-family: Lexend;
     color: #AEACAC;
-    margin-top: 60px;
+    margin-top: 35px;
     display: flex;
     flex-direction: row;
     column-gap: 15px;
