--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -3,6 +3,10 @@
     width: 430px;
     margin: 0 auto;
     background-size: cover;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .parentContainer {
@@ -14,6 +18,7 @@
     justify-content: center;
     position: static;
     height: 100vh;
+    width: 430px;
 }
 
 .groove h1 {
