--- a/styles/Explore.module.css
+++ b/styles/Explore.module.css
@@ -25,8 +25,8 @@
 } 
 
 .scroll::-webkit-scrollbar {
-  width: 0px !important; /* Width of the vertical scrollbar */
-  height: 0px !important; /* Height of the horizontal scrollbar */
+  width: 0px !important;
+  height: 0px !important;
   display: none !important;
 }
 
