--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -15,8 +15,8 @@
 }
 
 .parentContainer::-webkit-scrollbar {
-    width: 0px !important; /* Width of the vertical scrollbar */
-    height: 0px !important; /* Height of the horizontal scrollbar */
+    width: 0px !important; 
+    height: 0px !important; 
     display: none !important;
   }
 
