--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -97,5 +97,9 @@
 .chartContainer {
     border: 2px solid var(--groovy-white);
     border-radius: 20px;
-    padding: 20px 15px
+    padding: 40px 45px;
+}
+
+.Span {
+    font-family: 'Lexend Bold';
 }
