--- a/components/PostForm/PostForm.module.css
+++ b/components/PostForm/PostForm.module.css
@@ -60,6 +60,7 @@
     padding: 10px 13px 10px 13px;
     border-radius: 5px;
     border: none;
+    margin-top: 5px;
 }
 
 .submitButton {
@@ -99,6 +100,7 @@
 .inputcheckboxContainer {
     display: flex;
     justify-content: center;
+    margin-top: 5px;
 }
 
 .checkbox {
@@ -112,10 +114,7 @@
     justify-content: space-between;
 }
 
-.stars {
-    font-family: 'Lexend', sans-serif;
-}
-
 .subtitleCheckbox {
     display: flex;
+    align-items: center;
 }
