small edits on settings

--- a/styles/team.module.css
+++ b/styles/team.module.css
@@ -92,7 +92,7 @@
 
 .placeholder2 {
     transform: translateY(40px) rotate(13.32deg);
-    z-index: 2; /* Ensures it overlays appropriately if needed */
+    z-index: 2; 
 }
 
 .placeholder3 {
