--- a/styles/review.module.css
+++ b/styles/review.module.css
@@ -51,3 +51,8 @@
     margin-top: 67px;
     margin-bottom: 37px;;
 }
+
+.genresContainer {
+    font-family: 'Lexend';
+    background-color: blueviolet;
+}
