--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -19,6 +19,8 @@
     position: static;
     height: 100vh;
     width: 430px;
+    overflow-y: hidden;
+    position: relative;
 }
 
 .groove h1 {
@@ -36,6 +38,7 @@
     position: fixed;
     top: 0;
     font-family: 'PP Monument Extended Regular';
+    z-index: 1000;
 }
 
 .header {
@@ -45,6 +48,8 @@
 
 .logo {
     margin-top: 50px;
+    position: relative;
+    z-index: 0;
 }
 
 .welcome {
@@ -72,10 +77,16 @@
     background: var(--background-black);
     font-size: var(--lexend-subheader);
     color: white;
-    border: solid 2px #9e80f1;
+    border: solid 3px #9e80f1;
     padding: 5px 16px;
     border-radius: 12px;
     margin-top: 20px;
+}
+
+.start:hover {
+    background: var(--groovy-purple-light);
+    color: var(--groovy-black);
+    border: 3px solid var(--groovy-purple-light);
 }
 
 .navBar {
