edited activity page again

--- a/styles/Activity.module.css
+++ b/styles/Activity.module.css
@@ -1,6 +1,6 @@
 .main {
     background: var(--background-black);
-    color: #fff;
+    color: var(--groovy-white);
     display: flex;
     flex-direction: column;
     align-items: center;
