--- a/components/Notifications/Notifications.module.css
+++ b/components/Notifications/Notifications.module.css
@@ -26,7 +26,7 @@
   font-size: var(--lexend-subheader);
   margin-top: 20px;
   margin-bottom: 10px;
-  color: white;
+  color: var(--groovy-white);
   font-family: 'Lexend';
   margin-left: 10px;
 }
