--- a/styles/onboarding.module.css
+++ b/styles/onboarding.module.css
@@ -60,7 +60,7 @@
     width: 430px;
     height: 343px;
     background: var(--background-black);
-    color: #fff;
+    color: var(--groovy-white);
     margin-top: auto;
     z-index: 3;
     text-align: left;
@@ -76,20 +76,20 @@
 
 .blackBG h2 {
     font-family: 'Lexend';
-    font-size: 33.18px;
+    font-size: var(--lexend-header);
     
 }
 
 .text {
     margin-top: 20px;
-    font-size: 16px;
+    font-size: var(--lexend-body);
     font-family: 'Lexend';
 }
 
 .next {
     font-size: 20px;
     font-family: Lexend;
-    color: #AEACAC;
+    color: var(--unselected-button-lightgrey);
     margin-top: 35px;
     display: flex;
     flex-direction: row;
@@ -113,7 +113,7 @@
     width: 24px;
     height: 11px;
     border-radius: 10px;
-    background: #9E80F1;
+    background: var(--groovy-purple);
 }
 
 .circle :nth-child(2) {
