--- a/styles/onboarding2.module.css
+++ b/styles/onboarding2.module.css
@@ -71,7 +71,7 @@
     width: 430px;
     height: 343px;
     background: var(--background-black);
-    color: #fff;
+    color: var(--groovy-white);
     margin-top: auto;
     z-index: 3;
     text-align: left;
@@ -87,20 +87,20 @@
 
 .blackBG h2 {
     font-family: 'Lexend';
-    font-size: 33.18px;
+    font-size: var(--lexend-header);
     
 }
 
 .text {
     margin-top: 20px;
-    font-size: 16px;
+    font-size: var(--lexend-body);
     font-family: 'Lexend';
 }
 
 .next {
     font-size: 20px;
-    font-family: Lexend;
-    color: #AEACAC;
+    font-family: 'Lexend';
+    color: var(--unselected-button-lightgrey);
     margin-top: 35px;
     display: flex;
     flex-direction: row;
@@ -116,8 +116,8 @@
 
 .back {
     font-size: 20px;
-    font-family: Lexend;
-    color: #AEACAC;
+    font-family: 'Lexend';
+    color: var(--unselected-button-lightgrey);
     margin-top: 25px;
     display: flex;
     flex-direction: row;
@@ -152,7 +152,7 @@
     width: 24px;
     height: 11px;
     border-radius: 10px;
-    background: #DC7755;
+    background: var(--groovy-red);
 }
 
 .circle :nth-child(3) {
