--- a/styles/onboarding3.module.css
+++ b/styles/onboarding3.module.css
@@ -70,7 +70,7 @@
     width: 430px;
     height: 343px;
     background: var(--background-black);
-    color: #fff;
+    color: var(--groovy-white);
     margin-top: auto;
     z-index: 3;
     text-align: left;
@@ -86,19 +86,19 @@
 
 .blackBG h2 {
     font-family: 'Lexend';
-    font-size: 33.18px;
+    font-size: var(--lexend-header);
 }
 
 .text {
     margin-top: 20px;
-    font-size: 16px;
+    font-size: var(--lexend-body);
     font-family: 'Lexend';
 }
 
 .next {
     font-size: 20px;
-    font-family: Lexend;
-    color: #AEACAC;
+    font-family: 'Lexend';
+    color: var(--unselected-button-lightgrey);
     margin-top: 35px;
     display: flex;
     flex-direction: row;
@@ -114,8 +114,8 @@
 
 .back {
     font-size: 20px;
-    font-family: Lexend;
-    color: #AEACAC;
+    font-family: 'Lexend';
+    color: var(--unselected-button-lightgrey);
     margin-top: 35px;
     display: flex;
     flex-direction: row;
@@ -157,7 +157,7 @@
     width: 24px;
     height: 11px;
     border-radius: 10px;
-    background: #F6C65C;
+    background: var(--groovy-yellow);
 }
 
 .circle :nth-child(4) {
