--- a/components/NavigationBar/NavBar.module.css
+++ b/components/NavigationBar/NavBar.module.css
@@ -33,7 +33,7 @@
     flex-direction: row;
     column-gap: 30px;
     font-size: 10px;
-    color: #7D7E80;
+    color: var(--unselected-icongrey);
     justify-content: center;
     align-items: center;
 }
@@ -46,13 +46,19 @@
     width: 50px;
 }
 
+.list a, .list a span {  
+    text-decoration: none;  
+    color: inherit; 
+}
+  
+
 .link {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 50px; 
-    color: #7D7E80;
+    color: var(--unselected-icongrey);
 }
 
 .text {
@@ -65,3 +71,7 @@
 .link span {
     margin-top: 5px;
 }
+
+.active img {
+    filter: brightness(0) invert(1);
+  }
