--- a/styles/ChildOne.module.css
+++ b/styles/ChildOne.module.css
@@ -76,7 +76,7 @@
 .question {
     text-align: center;
     font-family: 'Lexend';
-    font-size: var(--lexend-subheader);
+    font-size: 18px;
     margin-top: 80px;
     padding-left: 30px;
     padding-right: 30px;
